--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "start": "electron ."
   },
   "author": "Devendra",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "electron": "^1.6.11",
+    "jquery": "^3.2.1",
+    "websocket": "^1.0.24"
+  }
 }
